service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aycap-dev-services
spec:
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
  selector:
    app: aycap-dev
  type: LoadBalancer
