ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: aycap-dev

  annotations:

    nginx.ingress.kubernetes.io/rewrite-target: /

spec:

  rules:

    - host: aycap.challenges-dev.com

      http:

        paths:

          - path: /

            pathType: Prefix

            backend:

              service:

                name: aycap-dev

                port:

                  number: 8000
